--- a/index.html
+++ b/index.html
@@ -725,6 +725,10 @@
     </section>
     <section class="filter">
       <div class="container">
+        <div class="filter__title">
+          <h6>Welcome to</h6>
+          <h2>OUR SEVICES</h2>
+        </div>
         <div class="filter__wrapper row">
           <div class="tabs__btns col-lg-12 offset-xl-1 col-xl-10">
             <div class="tabs__btn active">All</div>
@@ -848,7 +852,10 @@
               /></a>
             </div>
           </div>
-          <button class="filter__more">load more</button>
+          <div class="filter__more_files">
+            <input type="file" id="file" />
+            <label for="file" class="filter__more">load more</label>
+          </div>
         </div>
       </div>
     </section>
@@ -861,7 +868,7 @@
         <div class="plan__items">
           <div class="plan__item">
             <div class="plan__content">
-              <img src="/img/section11-logo2.png" alt="book" />
+              <img src="./img/section11-logo2.png" alt="book" />
               <h5>Student</h5>
               <div class="plan__prices">
                 <div class="plan__znak"><p>$</p></div>
@@ -875,11 +882,11 @@
               <p class="plan__inseptTxt">Responsive</p>
               <p class="plan__inseptTxt">Customization</p>
             </div>
-            <a href="#" class="plan__btn">Sign up</a>
+            <a href="##" class="plan__btn">Sign up</a>
           </div>
           <div class="plan__item">
             <div class="plan__content">
-              <img src="/img/section11-logo3.png" alt="box" />
+              <img src="./img/section11-logo3.png" alt="box" />
               <h5>Professional</h5>
               <div class="plan__prices">
                 <div class="plan__znak"><p>$</p></div>
@@ -897,7 +904,7 @@
           </div>
           <div class="plan__item">
             <div class="plan__content">
-              <img src="/img/section11-logo4.png" alt="package" />
+              <img src="./img/section11-logo4.png" alt="package" />
               <h5>Unlimited</h5>
               <div class="plan__prices">
                 <div class="plan__znak"><p>$</p></div>
@@ -911,7 +918,7 @@
               <p>Responsive</p>
               <p>Customization</p>
             </div>
-            <a href="#" class="plan__btn">Sign up</a>
+            <a href="##" class="plan__btn">Sign up</a>
           </div>
         </div>
       </div>
@@ -923,7 +930,10 @@
           <h2>Subscribe now</h2>
         </div>
         <div class="subskribe__content row">
-          <form action="#" class="subskribe__form col-4 offset-4">
+          <form
+            action="#"
+            class="subskribe__form col-sm-8 offset-sm-2 col-lg-4 offset-lg-4"
+          >
             <input
               class="subskribe__input"
               type="text"
@@ -936,7 +946,7 @@
               name="email"
               placeholder="Example@gmail.com"
             />
-            <a class="subskribe__btn" href="#">subscribe</a>
+            <a class="subskribe__btn" href="##">subscribe</a>
           </form>
         </div>
       </div>
@@ -1007,7 +1017,7 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <p>&copy; Copyright 2017</p>
+          <p>&copy; Copyright 2020</p>
           <p>All rights reserved</p>
           <p>Template Designed By Sourabh Barua</p>
         </div>
