--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
         <div class="footer__items">
           <div class="footer__title">
             <div class="footer__logo">
-              <img src="/img/footer-logo.png" alt="Mogo" />
+              <img src="./img/footer-logo.png" alt="Mogo" />
             </div>
             <p class="footer__text">
               Flaby is a free flat template and available for free downloads but
