--- a/index.html
+++ b/index.html
@@ -269,16 +269,16 @@
             <img src="./img/section6-logo.png" alt="#" />
           </div>
           <div class="whatWeDo__slaids col-xl-6">
-            <div class="accordion">
-              <div class="trigger">
-                <input type="checkbox" id="checkbox-1" name="checkbox-1" />
-                <label for="checkbox-1" class="checkbox">
-                  <div class="whatWeDo__pick">
+            <div class="whatWeDo__accordion">
+              <div class="accordion__items">
+                <div class="accordion__item">
+                  <div class="accordion__pick">
                     <img src="./img/section6-logo1.png" alt="#" />
+                    <h6>Photography</h6>
                   </div>
-                  Photography <i></i>
-                </label>
-                <div class="content">
+                  <i class="fas fa-angle-up"></i>
+                </div>
+                <div class="accordion__content">
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
@@ -299,15 +299,15 @@
                   </p>
                 </div>
               </div>
-              <div class="trigger">
-                <input type="checkbox" id="checkbox-2" name="checkbox-2" />
-                <label for="checkbox-2" class="checkbox">
-                  <div class="whatWeDo__pick">
+              <div class="accordion__items">
+                <div class="accordion__item">
+                  <div class="accordion__pick">
                     <img src="./img/section6-logo2.png" alt="#" />
+                    <h6>creativity</h6>
                   </div>
-                  creativity <i></i>
-                </label>
-                <div class="content">
+                  <i class="fas fa-angle-up"></i>
+                </div>
+                <div class="accordion__content">
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
@@ -328,15 +328,15 @@
                   </p>
                 </div>
               </div>
-              <div class="trigger">
-                <input type="checkbox" id="checkbox-3" name="checkbox-3" />
-                <label for="checkbox-3" class="checkbox">
-                  <div class="whatWeDo__pick">
+              <div class="accordion__items">
+                <div class="accordion__item">
+                  <div class="accordion__pick">
                     <img src="./img/section6-logo3.png" alt="#" />
+                    <h6>web design</h6>
                   </div>
-                  web design <i></i>
-                </label>
-                <div class="content">
+                  <i class="fas fa-angle-up"></i>
+                </div>
+                <div class="accordion__content">
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
