move section on another files

--- a/index.html
+++ b/index.html
@@ -740,37 +740,37 @@
             <div class="tabs__btn">Mobile app</div>
           </div>
           <div class="tabs__cards">
-            <div class="tabs__card active" data-category="logo">
+            <div class="tabs__card active vis" data-category="logo">
               <a data-fancybox="gallery" href="./img/filter-logo1.png"
                 ><img src="./img/filter-logo1.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="branding">
+            <div class="tabs__card active vis" data-category="branding">
               <a data-fancybox="gallery" href="./img/filter-logo2.png"
                 ><img src="./img/filter-logo2.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="wordpress">
+            <div class="tabs__card active vis" data-category="wordpress">
               <a data-fancybox="gallery" href="./img/filter-logo3.png"
                 ><img src="./img/filter-logo3.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="logo">
+            <div class="tabs__card active vis" data-category="logo">
               <a data-fancybox="gallery" href="./img/filter-logo4.png"
                 ><img src="./img/filter-logo4.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="branding">
+            <div class="tabs__card active vis" data-category="branding">
               <a data-fancybox="gallery" href="./img/filter-logo6.png"
                 ><img src="./img/filter-logo6.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="web design">
+            <div class="tabs__card active vis" data-category="web design">
               <a data-fancybox="gallery" href="./img/filter-logo7.png"
                 ><img src="./img/filter-logo7.png"
               /></a>
             </div>
-            <div class="tabs__card active" data-category="ui/ix">
+            <div class="tabs__card active vis" data-category="ui/ix">
               <a data-fancybox="gallery" href="./img/filter-logo8.png"
                 ><img src="./img/filter-logo8.png"
               /></a>
@@ -795,65 +795,44 @@
                 ><img src="./img/filter-logo11.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="wordpress"
-            >
+            <div class="tabs__card active" data-category="wordpress">
               <a data-fancybox="gallery" href="./img/filter-logo12.png"
                 ><img src="./img/filter-logo12.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="branding"
-            >
+            <div class="tabs__card active" data-category="branding">
               <a data-fancybox="gallery" href="./img/filter-logo13.png"
                 ><img src="./img/filter-logo13.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="logo"
-            >
+            <div class="tabs__card active" data-category="logo">
               <a data-fancybox="gallery" href="./img/filter-logo14.png"
                 ><img src="./img/filter-logo14.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="ui/ix"
-            >
+            <div class="tabs__card active" data-category="ui/ix">
               <a data-fancybox="gallery" href="./img/filter-logo15.png"
                 ><img src="./img/filter-logo15.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="mobile app"
-            >
+            <div class="tabs__card active" data-category="mobile app">
               <a data-fancybox="gallery" href="./img/filter-logo16.png"
                 ><img src="./img/filter-logo16.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="web design"
-            >
+            <div class="tabs__card active" data-category="web design">
               <a data-fancybox="gallery" href="./img/filter-logo17.png"
                 ><img src="./img/filter-logo17.png"
               /></a>
             </div>
-            <div
-              class="tabs__card active filter_invisible"
-              data-category="mobile app"
-            >
+            <div class="tabs__card active" data-category="mobile app">
               <a data-fancybox="gallery" href="./img/filter-logo18.png"
                 ><img src="./img/filter-logo18.png"
               /></a>
             </div>
           </div>
           <div class="filter__more_files">
-            <input type="file" id="file" />
+            <!-- <input type="file" id="file" /> -->
             <label for="file" class="filter__more">load more</label>
           </div>
         </div>
@@ -932,7 +911,7 @@
         <div class="subskribe__content row">
           <form
             action="#"
-            class="subskribe__form col-sm-8 offset-sm-2 col-lg-4 offset-lg-4"
+            class="subskribe__form col-sm-8 offset-sm-2 col-lg-6 offset-lg-3"
           >
             <input
               class="subskribe__input"
