--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       src="https://kit.fontawesome.com/7ba71101b8.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./libs/animate.css" />
     <link rel="stylesheet" href="./libs/bootstrap.min.css" />
     <link rel="stylesheet" href="./src/index.css" />
   </head>
@@ -34,7 +33,7 @@
               <li><a class="elem" href="##">contact</a></li>
             </ul>
           </nav>
-          <div class="header__nav_min animated fadeInDownBig">
+          <div class="header__nav_min">
             <nav>
               <ul>
                 <li><a href="##" class="elem">About</a></li>
