--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
               <li><a class="elem" href="##">contact</a></li>
             </ul>
           </nav>
-          <div class="header__nav_min">
-            <nav>
-              <ul>
-                <li><a href="##" class="elem">About</a></li>
-                <li><a href="##" class="elem">Service</a></li>
-                <li><a href="##" class="elem">Work</a></li>
-                <li><a href="##" class="elem">blog</a></li>
-                <li><a href="##" class="elem">contact</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="header__hamburger">
-            <span class="hamburger-global burger-top"></span>
-            <span class="hamburger-global burger-middle"></span>
-            <span class="hamburger-global burger-bottom"></span>
+          <div class="hamburger-menu">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
+            <ul class="menu__box">
+              <li><a class="menu__item" href="#">home</a></li>
+              <li><a class="menu__item" href="#">about</a></li>
+              <li><a class="menu__item" href="#">portfolio</a></li>
+              <li><a class="menu__item" href="#">blog</a></li>
+              <li><a class="menu__item" href="#">contact</a></li>
+            </ul>
           </div>
         </div>
         <div class="header__title row">
