--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         </div>
       </div>
     </section>
-    <!--<section class="team">
+    <section class="team">
       <div class="container">
         <div class="team__title">
           <h6>Who we are</h6>
@@ -997,7 +997,6 @@
         </div>
       </div>
     </footer>
-    -->
     <script src="./jquery-3.5.0.js"></script>
     <script src="./libs/owl.carousel.min.js"></script>
     <script src="./src/index.js"></script>
