add corrections for the seventh section

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
       </div>
     </section>
     <section class="work">
-      <div class="container">
+      <div class="container work__header">
         <div class="work__title">
           <h6>What we do</h6>
           <h2>some of our work</h2>
@@ -516,58 +516,72 @@
             aliquip ex ea commodo consequat.
           </p>
         </div>
-        <div class="work__content row">
-          <div class="work__items col-md-12 col-xl-6">
-            <div class="work__item col-md-6">
-              <div class="work__overlay">
-                <div>
-                  <img src="./img/section8-logo9.png" alt="#" />
-                </div>
-                <h6>creatively designed</h6>
-                <p>Lorem ipsum dolor sit</p>
+      </div>
+      <div class="work__content row">
+        <div class="work__items col-md-12 col-xl-6">
+          <div class="work__item col-md-6">
+            <div class="work__overlay">
+              <div>
+                <img src="./img/section8-logo9.png" alt="#" />
               </div>
-              <div class="work__pick">
-                <img src="./img/section8-logo1.png" alt="section7-logo" />
-              </div>
+              <h6>creatively designed</h6>
+              <p>Lorem ipsum dolor sit</p>
             </div>
-            <div class="work__item col-md-6">
-              <div class="work__overlay">
-                <div>
-                  <img src="./img/section8-logo9.png" alt="#" />
-                </div>
-                <h6>creatively designed</h6>
-                <p>Lorem ipsum dolor sit</p>
-              </div>
-              <div class="work__pick">
-                <img src="./img/section8-logo2.png" alt="section7-logo" />
-              </div>
-            </div>
-            <div class="work__item col-md-6">
-              <div class="work__overlay">
-                <div>
-                  <img src="./img/section8-logo9.png" alt="#" />
-                </div>
-                <h6>creatively designed</h6>
-                <p>Lorem ipsum dolor sit</p>
-              </div>
-              <div class="work__pick">
-                <img src="./img/section8-logo3.png" alt="section7-logo" />
-              </div>
-            </div>
-            <div class="work__item col-md-6">
-              <div class="work__overlay">
-                <div>
-                  <img src="./img/section8-logo9.png" alt="#" />
-                </div>
-                <h6>creatively designed</h6>
-                <p>Lorem ipsum dolor sit</p>
-              </div>
-              <div class="work__pick">
-                <img src="./img/section8-logo4.png" alt="section7-logo" />
-              </div>
+            <div class="work__pick">
+              <img src="./img/section8-logo1.png" alt="section7-logo" />
             </div>
           </div>
-          <div class="work__items col-md-12 col-xl-6">
+          <div class="work__item col-md-6">
+            <div class="work__overlay">
+              <div>
+                <img src="./img/section8-logo9.png" alt="#" />
+              </div>
+              <h6>creatively designed</h6>
+              <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div class="work__pick">
+              <img src="./img/section8-logo2.png" alt="section7-logo" />
+            </div>
+          </div>
+          <div class="work__item col-md-6">
+            <div class="work__overlay">
+              <div>
+                <img src="./img/section8-logo9.png" alt="#" />
+              </div>
+              <h6>creatively designed</h6>
+              <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div class="work__pick">
+              <img src="./img/section8-logo3.png" alt="section7-logo" />
+            </div>
+          </div>
+          <div class="work__item col-md-6">
+            <div class="work__overlay">
+              <div>
+                <img src="./img/section8-logo9.png" alt="#" />
+              </div>
+              <h6>creatively designed</h6>
+              <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div class="work__pick">
+              <img src="./img/section8-logo4.png" alt="section7-logo" />
+            </div>
+          </div>
+        </div>
+        <div class="work__items col-md-12 col-xl-6">
+          <div class="work__item col-md-6">
+            <div class="work__overlay">
+              <div>
+                <img src="./img/section8-logo9.png" alt="#" />
+              </div>
+              <h6>creatively designed</h6>
+              <p>Lorem ipsum dolor sit</p>
+            </div>
+            <div class="work__pick">
+              <img src="./img/section8-logo5.png" alt="section7-logo" />
+            </div>
+          </div>
+          <div class="work__duble col-md-6">
             <div class="work__item col-md-6">
               <div class="work__overlay">
                 <div>
@@ -577,37 +591,25 @@
                 <p>Lorem ipsum dolor sit</p>
               </div>
               <div class="work__pick">
-                <img src="./img/section8-logo5.png" alt="section7-logo" />
+                <img src="./img/section8-logo6.png" alt="section7-logo" />
               </div>
             </div>
-            <div class="work__duble col-md-6">
-              <div class="work__item col-md-6">
-                <div class="work__overlay">
-                  <div>
-                    <img src="./img/section8-logo9.png" alt="#" />
-                  </div>
-                  <h6>creatively designed</h6>
-                  <p>Lorem ipsum dolor sit</p>
+            <div class="work__item col-md-6">
+              <div class="work__overlay">
+                <div>
+                  <img src="./img/section8-logo9.png" alt="#" />
                 </div>
-                <div class="work__pick">
-                  <img src="./img/section8-logo6.png" alt="section7-logo" />
-                </div>
+                <h6>creatively designed</h6>
+                <p>Lorem ipsum dolor sit</p>
               </div>
-              <div class="work__item col-md-6">
-                <div class="work__overlay">
-                  <div>
-                    <img src="./img/section8-logo9.png" alt="#" />
-                  </div>
-                  <h6>creatively designed</h6>
-                  <p>Lorem ipsum dolor sit</p>
-                </div>
-                <div class="work__pick">
-                  <img src="./img/section8-logo7.png" alt="section7-logo" />
-                </div>
+              <div class="work__pick">
+                <img src="./img/section8-logo7.png" alt="section7-logo" />
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container work__footer">
         <div class="work__slider owl-carousel">
           <div class="work__slide">
             <div class="work__slide_logo">
