add section 10,11,12,footer

--- a/index.html
+++ b/index.html
@@ -721,7 +721,166 @@
         </div>
       </div>
     </section>
-    <section class="filter">
+    <section class="blog">
+      <div class="container">
+        <div class="blog__title">
+          <h6>Our stories</h6>
+          <h2>Latest blog</h2>
+        </div>
+        <div class="row">
+          <div class="blog__content col-12">
+            <div class="blog__items col-lg-6 col-xl-4">
+              <div class="blog__logo">
+                <img src="./img/section10-logo1.png" alt="" />
+              </div>
+              <div class="blog__date first_date">
+                <p class="blog__date__item">15</p>
+                <span>Jan</span>
+              </div>
+              <h6>Lorem ipsum dolor sit amet</h6>
+              <p>
+                Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua.
+              </p>
+              <div class="blog__views">
+                <i class="fas fa-eye"></i><span>542</span
+                ><i class="fas fa-comment-dots"></i><span>17</span>
+              </div>
+            </div>
+            <div class="blog__items col-lg-6 col-xl-4">
+              <div class="blog__logo">
+                <img src="./img/section10-logo2.png" alt="" />
+              </div>
+              <div class="blog__date">
+                <p class="blog__date__item">14</p>
+                <span>Jan</span>
+              </div>
+              <h6>sed do eiusmod tempor</h6>
+              <p>
+                Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.
+              </p>
+              <div class="blog__views">
+                <i class="fas fa-eye"></i><span>992</span
+                ><i class="fas fa-comment-dots"></i><span>42</span>
+              </div>
+            </div>
+            <div class="blog__items col-lg-6 col-xl-4">
+              <div class="blog__logo">
+                <img src="./img/section10-logo3.png" alt="" />
+              </div>
+              <div class="blog__date">
+                <p class="blog__date__item">12</p>
+                <span>Jan</span>
+              </div>
+              <h6>incididunt ut labore et dolore</h6>
+              <p>
+                Elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </p>
+              <div class="blog__views">
+                <i class="fas fa-eye"></i><span>1560</span
+                ><i class="fas fa-comment-dots"></i><span>98</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <div class="map__items">
+        <i class="fas fa-map-marker-alt"></i>
+        <h3>Open map</h3>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content col-12">
+          <div class="footer__items col-xl-4">
+            <img src="./img/footer-logo.png" alt="MoGo" />
+            <p class="footer__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <p class="footer__followers"><span>15k</span>followers</p>
+            <div class="footer__followUs">
+              <p>Follow Us:</p>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram-square"></i></a>
+              <a href="#"><i class="fab fa-pinterest-p"></i></a>
+              <a href="#"><i class="fab fa-google"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-dribbble"></i></a>
+              <a href="#"><i class="fab fa-tumblr"></i></a>
+            </div>
+            <form action="#" class="footer__input">
+              <input type="email" id="input" placeholder="Your Email..." />
+              <button class="footer__btn" type="submit">subscribe</button>
+            </form>
+          </div>
+          <div class="footer__blogs col-xl-4">
+            <h6>blogs</h6>
+            <div class="footer__blogs__item">
+              <div class="footer__blogs__logo">
+                <img src="./img/footer-logo1.png" alt="MoGo_blogs" />
+              </div>
+              <div>
+                <p class="footer__blogs__title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                </p>
+                <p class="footer__blogs__subtitle">
+                  Jan 9, 2016
+                </p>
+              </div>
+            </div>
+            <div class="footer__blogs__item">
+              <div class="footer__blogs__logo">
+                <img src="./img/footer-logo2.png" alt="MoGo_blogs" />
+              </div>
+              <div>
+                <p class="footer__blogs__title">
+                  Consectetur adipiscing elit, sed do eiusmod tempor
+                </p>
+                <p class="footer__blogs__subtitle">
+                  Jan 9, 2016
+                </p>
+              </div>
+            </div>
+            <div class="footer__blogs__item">
+              <div class="footer__blogs__logo">
+                <img src="./img/footer-logo3.png" alt="MoGo_blogs" />
+              </div>
+              <div>
+                <p class="footer__blogs__title">
+                  sed do eiusmod tempor incididunt ut labore
+                </p>
+                <p class="footer__blogs__subtitle">
+                  Jan 9, 2016
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="footer__instagram col-xl-3">
+            <h6>instagram</h6>
+            <div class="footer__instagram__items">
+              <div><img src="./img/footer-logo4.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo5.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo6.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo7.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo8.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo9.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo10.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo11.png" alt="MoGo_insta" /></div>
+              <div><img src="./img/footer-logo12.png" alt="MoGo_insta" /></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- <section class="filter">
       <div class="container">
         <div class="filter__title">
           <h6>Welcome to</h6>
@@ -998,7 +1157,7 @@
           <p>Template Designed By Sourabh Barua</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./jquery-3.5.0.js"></script>
     <script src="./libs/owl.carousel.min.js"></script>
     <script src="./src/index.js"></script>
